syntax = "proto3";

package NAlice.NModifiers.NConjugator;

option go_package = "a.yandex-team.ru/alice/megamind/protos/analytics/modifiers/conjugator";
option java_package = "ru.yandex.alice.megamind.protos.analytics.modifiers.conjugator";

import "mapreduce/yt/interface/protos/extension.proto";

message TConjugator {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    uint32 ConjugatedPhrasesCount = 1 [json_name = "conjugated_phrases_count", (NYT.column_name) = "conjugated_phrases_count"];
    bool IsOutputSpeechConjugated = 2 [json_name = "is_output_speech_conjugated", (NYT.column_name) = "is_output_speech_conjugated"];
    uint32 ConjugatedCardsCount = 3 [json_name = "conjugated_cards_count", (NYT.column_name) = "conjugated_cards_count"];

    message TConjugationPhrasesPair {
        string UnconjugatedPhrase = 1 [json_name = "unconjugated_phrase", (NYT.column_name) = "unconjugated_phrase"];
        string ConjugatedPhrase = 2 [json_name = "conjugated_phrase", (NYT.column_name) = "conjugated_phrase"];
    }

    TConjugationPhrasesPair OutputSpeechConjugationPhrasesPair = 4 [json_name = "output_speech_conjugation_phrases_pair", (NYT.column_name) = "output_speech_conjugation_phrases_pair"];
    repeated TConjugationPhrasesPair CardConjugationPhrasesPairs = 5 [json_name = "card_conjugation_phrases_pairs", (NYT.column_name) = "card_conjugation_phrases_pairs"];
}
