syntax = "proto3";

package NAlice.NConjugator;

option go_package = "a.yandex-team.ru/alice/protos/api/conjugator";
option java_package = "ru.yandex.alice.protos.api.conjugator";

import "alice/protos/data/language/language.proto";

message TConjugateRequest {
    repeated string UnconjugatedPhrases = 1 [json_name = "unconjugated_phrases"];
    ELang Language = 2 [json_name = "language"];
}

message TConjugateResponse {
    repeated string ConjugatedPhrases = 1 [json_name = "conjugated_phrases"];;
}
